@@ -80,7 +80,7 @@ class SmartyTests extends PHPUnit_Framework_TestSuite {
     public static function suite()
     {
         $testorder = array(
-            'ExtendsResourceTests',
+            'DefaultPluginHandlerTests',
             // 'PluginFunctionHtmlImageTests',
             // 'PluginFunctionFetchTests',
         );
